# debate

./: Cargo.toml  README.md
debate/: Cargo.toml
debate-demo/: Cargo.toml
debate-demo/src/: error.rs  main.rs
debate-derive/: Cargo.toml
debate-derive/src/: common.rs  from_args.rs  generics.rs  lib.rs  main_func.rs  usage.rs  value.rs
debate-derive/src/common/: enumeration.rs  mod.rs  value.rs
debate-derive/src/common/enumeration/: flag_set.rs  mod.rs  subcommand.rs
debate-derive/src/from_args/: common.rs  enumeration.rs  mod.rs  structure.rs
debate-derive/src/from_args/enumeration/: flag_set.rs  mod.rs  subcommand.rs
debate-derive/src/usage/: common.rs  mod.rs  structure.rs  value.rs
debate-derive/src/usage/enumeration/: flag_set.rs  mod.rs  subcommand.rs
debate-parser/: Cargo.toml
debate-parser/src/: arg.rs  lib.rs  populated_slice.rs
debate/src/: arguments.rs  build.rs  error.rs  errors.rs  from_args.rs  help.rs  impls.rs  lib.rs  parameter.rs  printers.rs  state.rs  util.rs
src/: error.rs  impls.rs  lib.rs  primitives.rs
