[package]
name = "debate-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
debate = { version = "0.1.0", path = "../debate" }
debate-derive = { version = "0.1.0", path = "../debate-derive" }
debate-parser = { version = "0.1.0", path = "../debate-parser" }
lazy_format = "2.0.3"
thiserror = "2.0.11"
