[package]
name = "debate-derive"
version = "0.1.0"
edition = "2024"

readme = "README.md"
license = "MPL-2.0"
description = "derive macro for the `debate` CLI arguments parser"
repository = "https://github.com/Lucretiel/debate"

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.20.11", default-features = false }
heck = { version = "0.5.0", default-features = false }
itertools = "0.14.0"
lazy_format = "2.0.3"
proc-macro2 = { version = "1.0.93", default-features = false, features = [
    "proc-macro",
] }
quote = { version = "1.0.38", default-features = false }
syn = { version = "2.0.98", default-features = false, features = [
    "derive",
    "parsing",
    "printing",
    "full",
] }
