[package]
name = "debate-derive"
version = "1.0.0"
edition = "2024"

readme = "../README.md"
license = "MPL-2.0"
description = "derive macro for the `debate` CLI arguments parser"
repository = "https://github.com/Lucretiel/debate"

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.21.3", default-features = false }
heck = { version = "0.5.0", default-features = false }
indexmap = { version = "2.11.1", default-features = false, features = ["std"] }
itertools = "0.14.0"
lazy_format = { version = "2.0.3", default-features = false }
proc-macro2 = { version = "1.0.93", default-features = false, features = [
    "proc-macro",
] }
quote = { version = "1.0.38", default-features = false }
regex = { version = "1.11.2", default-features = false, features = [
    "std",
    "perf",
] }
syn = { version = "2.0.98", default-features = false, features = [
    "derive",
    "parsing",
    "printing",
    "full",
] }
textwrap = "0.16.2"
