[package]
name = "debate-parser"
version = "0.1.0"
edition = "2024"

readme = "README.md"
license = "MPL-2.0"
description = "low-level no-std parser for command-line arguments"
repository = "https://github.com/Lucretiel/debate"

[dependencies]
memchr = { version = "2.7.4", default-features = false }

[features]
std = ["memchr/std"]
