[package]
name = "debate"
version = "0.1.0"
edition = "2024"

readme = "../README.md"
license = "MPL-2.0"
description = "A principled, type-driven CLI parser. Debate is a more sensible way to handle (command-line) arguments."
repository = "https://github.com/Lucretiel/debate"

[dependencies]
debate-parser = { path = "../debate-parser", version = "0.1.0" }
debate-derive = { path = "../debate-derive", version = "0.1.0" }
indent_write = "2.2.0"
joinery = "3.1.0"
lazy_format = { version = "2.0.3", default-features = false }
textwrap = "0.16.1"

# TODO: use a feature gate for usage functionality, since it brings in a lot
# of otherwise unnecessary dependencies related to text formatting and
# terminal coloring

[features]
default = ["std"]
std = ["debate-parser/std"]
